footer spacing  fixed

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -196,13 +196,13 @@ color: #787878;
     .contact-container{
         flex: 1 1 300px;
         /* Ensures items take at least 300px width */
-        margin: 10px;
+        margin-top: -20px;
    text-align: left;
-        margin-bottom: 10px;
+        margin-bottom: -120px;
     }
     .important-links-container{
      text-align: left;
-        margin: 10px;
+        margin-top: -15px;
    
     }
     .download-container{
@@ -240,9 +240,14 @@ height: 40px;
         width: 100%;
         height: 100%;
     }
-   
+   .dlc-holder{
+    padding-left: 5% !important;
+   }
 .socialInvisible{
     display: flex;
     margin-top: 15px;
+}
+.download-container h2{
+    margin-left: 0%;
 }
 }
